feat(filialsystem): daily receipt report having proper pdf formatting and output